--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>CECS105 Spring 2021</title> </head>
   <body>
     <h1>Hello World!! </h1>
-    <h3> It's Roni Allen </h3>
+    <h3> It's Dishant Sarvaiya </h3>
   </body>
 </html>
